<resources>
    <string name="app_name">Trata</string>
    <string name="menu_edit_button">Edit</string>
    <string name="action_menu_delete_icon">delete</string>
    <string name="action_menu_add_icon">add</string>
    <string name="action_menu_edit_icon">edit</string>
    <string name="menu_save_button">Save</string>
    <string name="edit_category_activity_title">Edit Category</string>
    <string name="edit_transaction_amount_text">Amount</string>
    <string name="edit_transaction_date_text">Date</string>
    <string name="edit_transaction_category_text">Category</string>
    <string name="edit_transaction_note_text">Note</string>
    <string name="init_activity_header">Choose your currency</string>
    <string name="init_activity_subhead">This will be the currency of your feed</string>
    <string name="init_activity_continue_text">Continue</string>
    <string name="delete_category_fragment_cancel_text">Cancel</string>
    <string name="delete_category_fragment_delete_text">Delete</string>
    <string name="delete_category_dialog_title">Delete Category</string>
    <string name="delete_category_dialog_description">Are you sure you want to delete this category and move all related transactions to the selected one?</string>
    <string name="settings">Settings</string>
    <string name="month_spinner">Select month</string>
    <string name="reports">Reports</string>
    <string name="settings_import_data">Import Data</string>
    <string name="settings_export_data">Export Data</string>
    <string name="settings_categories">Categories</string>
    <string name="settings_choose_currency">Choose Currency</string>
    <string name="hint_note">Note</string>
    <string name="settings_appearance">Appearance</string>
    <string name="appearance_default_theme">Default Theme</string>
    <string name="appearance_dark_theme">Dark Theme</string>
    <string name="edit_category_text_hint">Name</string>
    <string name="analytics_basic_text">Basic</string>
    <string name="analytics_category_text">Category</string>
    <string name="analytics_summary_text">Summary</string>
    <string name="summary_analytics_title">Summary</string>
    <string name="select_category_title">Select Category</string>
    <string name="title_appearance">Appearance</string>
    <string name="title_edit_transaction">Edit Transaction</string>
    <string name="title_analytics">Analytics</string>
    <string name="activity_appearance_theme_string">Theme</string>
    <string name="activity_appearance_display_mode_string">Display Mode</string>
    <string name="activity_appearance_default_mode">Default</string>
    <string name="activity_appearance_compact_mode">Compact</string>
    <string-array name="transaction_dialog_array">
        <item>Delete</item>
        <item>Edit</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="export_data_successful">Data has been successfully exported</string>
    <string name="export_data_error">Error while exporting data</string>
    <string name="import_data_successful">Data has been successfully imported</string>
    <string name="import_data_error">Error while importing data</string>
    <string name="delete_category_error">Cannot remove the last category</string>
    <string name="add_category_title">Add Category</string>
    <string name="date_picker_title_start_date">Select Start Date</string>
    <string name="date_picker_title_end_date">Select End Date</string>
    <string name="amount_with_currency">%1$s%2$s</string>
    <string name="date_range">%1$s - %2$s</string>
    <string name="custom_date_picker_cancel_button">Cancel</string>
    <string name="custom_date_picker_ok_button">Ok</string>
    <string name="custom_date_picker_next_button">Next</string>
    <string name="placeholder_transactions">There are no transactions for current month.\nStart adding transactions by clicking on the red button below</string>
    <string name="placeholder_analytics_details">There are no transactions for selected date range</string>
</resources>
