<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/currency_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="4dp"
        app:contentInsetEnd="4dp"
        android:theme="@style/AppTheme.AppBar"
        android:background="?attr/appBarBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/currency_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:scaleType="center"
                android:background="@drawable/selectable_item_background_circle"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:text="@string/settings_choose_currency"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="?attr/colorTitleText" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/currency_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:background="?attr/appBarBackground"
        android:text="@string/init_activity_header"
        android:textSize="30sp"
        android:textColor="?attr/colorTitleText"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/currency_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:background="?attr/appBarBackground"
        android:text="@string/init_activity_subhead"
        android:textColor="?attr/colorTitleText"
        android:textAlignment="center"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/currencies_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="48dp"
        android:paddingEnd="48dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/state_continue_button_background"
        android:text="@string/init_activity_continue_text"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

</LinearLayout>