<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="?attr/appBarBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_category_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="4dp"
        app:contentInsetEnd="4dp"
        android:theme="@style/AppTheme.AppBar"
        android:background="?attr/appBarBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/add_category_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:scaleType="center"
                android:background="@drawable/selectable_item_background_circle"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:id="@+id/add_category_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:text="@string/add_category_title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="?attr/colorTitleText" />

            <TextView
                android:id="@+id/add_category_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@drawable/selectable_item_background"
                android:padding="12dp"
                android:layout_marginEnd="4dp"
                android:text="@string/menu_save_button"
                android:textSize="18sp"
                android:textColor="?attr/colorTitleText"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    
    <EditText
        android:id="@+id/add_category_name_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:hint="@string/edit_category_text_hint"
        android:textSize="@dimen/text_size"
        android:textColorHint="?attr/customEditHintColor"
        android:textColor="?attr/customEditTextColor"
        android:textCursorDrawable="@null"
        android:inputType="text|textCapWords"
        android:backgroundTint="?attr/editTextTintColor"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_category_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>