<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:contentInsetStart="4dp"
        app:contentInsetEnd="4dp"
        android:theme="@style/AppTheme.AppBar"
        android:background="?attr/appBarBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/settings_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="12dp"
                android:scaleType="center"
                android:background="@drawable/selectable_item_background_circle"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_centerVertical="true"
                android:maxLines="1"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                android:textColor="?attr/colorTitleText" />

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/settings_import_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/listItemBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/selectable_item_background"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_import" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/listItemBackgroundColor"
            android:paddingEnd="8dp"
            android:paddingStart="32dp"
            android:text="@string/settings_import_data"
            android:textColor="?attr/listItemTextColor"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_export_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/listItemBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/selectable_item_background"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_import_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/lineDividerColor" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_export" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:paddingStart="32dp"
                android:text="@string/settings_export_data"
                android:textColor="?attr/listItemTextColor"
                android:textSize="@dimen/text_size" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_categories_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/listItemBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/selectable_item_background"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_export_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_categories" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="8dp"
            android:paddingStart="32dp"
            android:text="@string/settings_categories"
            android:textColor="?attr/listItemTextColor"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_currency_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/listItemBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/selectable_item_background"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_categories_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?attr/lineDividerColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_currencies" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:paddingStart="32dp"
                android:text="@string/settings_choose_currency"
                android:textColor="?attr/listItemTextColor"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_arrow_right" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_appearance_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="?attr/listItemBackgroundColor"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/selectable_item_background"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_currency_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_appearance" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="8dp"
            android:paddingStart="32dp"
            android:text="@string/settings_appearance"
            android:textColor="?attr/listItemTextColor"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_keyboard_arrow_right" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/settings_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint="?attr/progressBarColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>